apps-dev/gatekeeper/gitops/service/ingressrule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: espsrcgatekeeper-ingress
  #namespace: espsrcgatekeeper
  namespace: gatekeeper
  #annotations:
  #  traefik.ingress.kubernetes.io/router.middlewares: espsrcgatekeeper-strip-espsrcgatekeeper@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: "dev.gatekeeper.espsrc.iaa.csic.es"
      http:
        paths:
          - path: "/echo"
            pathType: Prefix
            backend:
              service:
                name: proxy-public
                port:
                  number: 80
